# climsight

./: .gitignore  .readthedocs.yaml  AGENTS.md  CLAUDE.md  CLIMASSIST_MVP.md  CLIMATE_DATA_ARCHITECTURE.md  ClimAssist_Vision_Katsina.docx  ClimAssist_Vision_v2.docx  DATA_ANALYSIS_AGENT_PROMPT.md  Dockerfile  Google_org_Strategy_v2.md  LICENSE  PULL_REQUEST.md  README.md  REVIEW.md  biodiversity_test.py  claw_key.pem  climsight.py  config.yml  config_tco1279.yml  config_tco319.yml  data_sources.yml  download_data.py  download_data.sh  ensure_data.py  environment.yml  geo_functions.py  lu2107ewd0.tmp  lu345a9lbl.tmp  natural_hazard_test.ipynb  population_test.ipynb  project_structure.txt  pyproject.toml  references.yml  requirements-api.txt  requirements.txt  run.py  save.py  vision_doc.js
.devcontainer/: devcontainer.json
.github/workflows/: containerize.yml  pytest.yml  python-package.yml
api/: __init__.py  main.py
api/routes/: __init__.py  analysis.py  climassist.py  sessions.py
docs/: befor_run.rst  citation.rst  conf.py  index.rst  installation.rst  introduction.rst  running_docker.rst  running_src.rst
evaluation/: QA.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: MapPanel.tsx  QueryForm.tsx  ReportView.tsx  SettingsPanel.tsx  StatusBar.tsx
rag/: db_generation.py
sequential/: Q_1.json  README.md  question_generator.py  question_map.py  question_runner.py  questions.json  questions_01.json  questions_02.json  questions_03.json  questions_04.json  questions_05.json  questions_06.json
src/climsight/: agent_helpers.py  climassist_service.py  climate_data_providers.py  climate_functions.py  climsight.py  climsight_classes.py  climsight_engine.py  config.py  data_analysis_agent.py  data_container.py  economic_functions.py  embedding_utils.py  environmental_functions.py  evaluation.py  extract_climatedata_functions.py  geo_functions.py  launch.py  question_runner.py  rag.py  sandbox_utils.py  session_manager.py  smart_agent.py  stream_handler.py  streamlit_interface.py  terminal_interface.py  test_engine.py  test_interfaces.py  utils.py
src/climsight/agents/: __init__.py  data_agent.py  researcher_agent.py  supervisor_agent.py
src/climsight/scripts/: download_destine_example.py  download_destine_simple.py  era5_fetch.py
src/climsight/tools/: __init__.py  destine_retrieval_tool.py  era5_climatology_tool.py  era5_retrieval_tool.py  get_data_components.py  image_viewer.py  package_tools.py  predefined_plots.py  python_repl.py  reflection_tools.py  visualization_tools.py
src/climsight/ui/: __init__.py  ui.py
test/: config_test_climate_functions.yml  config_test_economic_functions.yml  config_test_environmental_functions.yml  config_test_geofunctions.yml  conftest.py  era5_tool_manual.py  expected_df_climate_data.csv  expected_df_climate_data_tco1279.csv  expected_df_climate_data_tco319.csv  expected_population.csv  expected_x_year_mean_population.csv  plot_destine_data.py  pytest.ini  test_climate_functions.py  test_destine_tool.py  test_economic_functions.py  test_environmental_functions.py  test_geofunctions.py  test_llm_request_errors.py  test_rag.py
