[project]
name = "climsight"
version = "0.2.0"
readme = "README.md"
dependencies = [
    "streamlit",
    "xarray",
    "geopy",
    "geopandas",
    "pyproj",
    "requests",
    "requests-mock",
    "pandas",
    "folium",
    "langchain",
    "streamlit-folium",
    "netcdf4",
    "dask",
    "pip",
    "osmnx",
    "matplotlib",
    "openai",
    "langchain-community",
    "langchain-openai",
    "langchain-chroma",
    "langchain-core",
    "pydantic",
    "langgraph",
    "bs4",
    "wikipedia",
    "scipy",
    "pyproj"
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
#[tool.setuptools.packages]
#find = {}  # Scan the project directory with the default parameters


[project.scripts]
climsight = "climsight.launch:launch_streamlit"
