[project]
name = "climsight"
version = "1.0.0"
description = "A tool that combines LLMs with climate data to provide localized insights for decision-making in agriculture, urban planning, disaster management, and policy development."
readme = "README.md"
authors = [
    {name = "kuivi"},
    {name = "AntoniaJost"},
    {name = "koldunovn"},
    {name = "dmpantiu"},
    {name = "boryasbora"}
]
license = {text = "BSD-3-Clause"}
keywords = ["climate", "llm", "climate-assessment", "rag", "decision-support"]
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "streamlit",
    "streamlit-folium",
    "folium",

    # Climate & Geospatial Data Processing
    "xarray",
    "netcdf4",
    "geopandas",
    "shapely",
    "pyproj",
    "geopy",
    "osmnx",

    # Data Science & Numerical Computing
    "pandas",
    "numpy",
    "scipy",
    "dask",
    "matplotlib",

    # LangChain & LLM Framework
    "langchain",
    "langchain-classic",
    "langchain-community",
    "langchain-openai",
    "langchain-chroma",
    "langchain-core",
    "langchain-text-splitters",
    "langchain-experimental",
    "langchain-anthropic",
    "langgraph",
    "openai",
    "pydantic",

    # Web Scraping & Data Retrieval
    "bs4",
    "wikipedia",
    "requests",
    "requests-mock",

    # PDF Generation
    "reportlab",

    # ERA5 & Zarr tooling
    "zarr",
    "arraylake",
    "gcsfs",
    "numcodecs",
    "blosc",

    # Jupyter-backed Python REPL
    "jupyter_client",
    "ipykernel",

    # Configuration & Utilities
    "pyyaml",
    "python-dotenv",
]

[project.optional-dependencies]
aitta = ["aitta-client"]
dev = ["pytest", "flake8"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
climsight = "climsight.launch:launch_streamlit"

[project.urls]
"Source" = "https://github.com/CliDyn/climsight"
"Citation" = "https://doi.org/10.1038/s43247-023-01199-1"
